// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-pagination renders component with 78 pages 1`] = `
<wpp-pagination active-page-number="1" class="wpp-pagination wpp-pagination-wrapper" exportparts="body, per-page-label, pre-page-select, per-page-item, divider, range, page-select">
  <mock:shadow-root>
    <div class="control-pagination-wrapper" part="body">
      <wpp-typography part="per-page-label" type="s-body">
        Items per page:
      </wpp-typography>
      <wpp-select dropdownwidth="100px" istextselect="" part="pre-page-select" type="single" value="10"></wpp-select>
      <wpp-divider part="divider"></wpp-divider>
      <wpp-typography part="range" type="s-body">
        1-10 of 78 items
      </wpp-typography>
    </div>
    <wpp-pagination-select activepagenumber="1" count="8" pageselectthreshold="8" part="page-select"></wpp-pagination-select>
  </mock:shadow-root>
</wpp-pagination>
`;

exports[`wpp-pagination renders component with 100 pages and with 5 active page number 1`] = `
<wpp-pagination active-page-number="5" class="wpp-pagination wpp-pagination-wrapper" exportparts="body, per-page-label, pre-page-select, per-page-item, divider, range, page-select">
  <mock:shadow-root>
    <div class="control-pagination-wrapper" part="body">
      <wpp-typography part="per-page-label" type="s-body">
        Items per page:
      </wpp-typography>
      <wpp-select dropdownwidth="100px" istextselect="" part="pre-page-select" type="single" value="5"></wpp-select>
      <wpp-divider part="divider"></wpp-divider>
      <wpp-typography part="range" type="s-body">
        21-25 of 100 items
      </wpp-typography>
    </div>
    <wpp-pagination-select activepagenumber="5" count="20" pageselectthreshold="8" part="page-select"></wpp-pagination-select>
  </mock:shadow-root>
</wpp-pagination>
`;

exports[`wpp-pagination renders component with 100 pages and with 13 itemsPerPage option 1`] = `
<wpp-pagination active-page-number="1" class="wpp-pagination wpp-pagination-wrapper" exportparts="body, per-page-label, pre-page-select, per-page-item, divider, range, page-select">
  <mock:shadow-root>
    <div class="control-pagination-wrapper" part="body">
      <wpp-typography part="per-page-label" type="s-body">
        Items per page:
      </wpp-typography>
      <wpp-select dropdownwidth="100px" istextselect="" part="pre-page-select" type="single" value="13"></wpp-select>
      <wpp-divider part="divider"></wpp-divider>
      <wpp-typography part="range" type="s-body">
        1-13 of 100 items
      </wpp-typography>
    </div>
    <wpp-pagination-select activepagenumber="1" count="8" pageselectthreshold="8" part="page-select"></wpp-pagination-select>
  </mock:shadow-root>
</wpp-pagination>
`;
